policy/kyverno/tests/disallow-latest-tag/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-latest-tag
policies:
  - ../../cluster/disallow-latest-tag.yaml
resources:
  - valid-pinned-tag.yaml
  - invalid-latest-tag.yaml
results:
  - policy: disallow-latest-tag
    rule: disallow-latest-tag
    resources:
      - valid-pinned-tag
    kind: Pod
    result: pass
  - policy: disallow-latest-tag
    rule: disallow-latest-tag
    resources:
      - invalid-latest-tag
    kind: Pod
    result: fail
